# dockui

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: Cargo.toml  build.rs
backend/src/: config.rs  docker.rs  logs.rs  main.rs  registry.rs  store.rs  types.rs  util.rs  web.rs
backend/src/stats/: cgroup.rs  dockerapi.rs  host.rs  mod.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  format.ts  styles.css  types.ts
frontend/src/components/: Chart.tsx  ContainerList.tsx  HomeView.tsx  HostBar.tsx  LogViewer.tsx  MetricsCharts.tsx  Sparkline.tsx
