[package]
name = "dockui"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "Minimal, low-overhead Docker dashboard: containers, logs, CPU/memory with history"
license = "MIT"

[[bin]]
name = "dockui"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "sync", "time", "signal"] }
axum = { version = "0.7", features = ["http1", "tokio"] }
bollard = "0.17"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
anyhow = "1"
bytes = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
